# rtrace

./: Cargo.toml  README.md
data/: bluesky.ppm  hit_sphere.ppm  rainbow.ppm  surface_norm.ppm  surface_norm_grounded.ppm
src/: color.rs  config.rs  lib.rs  main.rs  ray.rs  raytracer.rs  sphere.rs  vec3.rs
