[package]
name = "rtrace"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "rtrace"
path = "src/lib.rs"
